--- a/ORT_THP_2Q_curso_i/.project
+++ b/ORT_THP_2Q_curso_i/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ORT_THP_2Q_curso_i_Java</name>
+	<name>ORT_THP_2Q_curso_i</name>
 	<comment></comment>
 	<projects>
 	</projects>
